<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lawriecate.apps.easyeats2.MealListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/breakfast"
                android:layout_height="wrap_content"
                android:id="@+id/btnBreakfast"
                android:layout_width="0dp"
                android:layout_weight="0.33"
                />

            <Button
                android:text="@string/lunch"
                android:layout_height="wrap_content"
                android:id="@+id/btnLunch"
                android:layout_weight="0.33"
                android:layout_width="0dp"
                />

            <Button
                android:text="@string/dinner"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:id="@+id/btnDinner"
                android:layout_weight="0.33" />
        </LinearLayout>

        <ListView
            android:id="@+id/meal_list_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </ListView>
    </LinearLayout>

</RelativeLayout>
