<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_meal_cooking_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lawriecate.apps.easyeats2.MealCookingViewActivity"
    tools:showIn="@layout/activity_meal_cooking_view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Step 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_step"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:layout_weight="1" />

            <TextView
                android:text="00:00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_timer"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:paddingRight="25dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="292dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="instructions go here..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_instruction"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="bottom">

            <Button
                android:text="@string/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_back_step"
                android:layout_weight="1" />

            <Button
                android:text="@string/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_control_timer"
                android:layout_weight="1" />

            <Button
                android:text="Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_forward_step"
                android:layout_weight="1"
                tools:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
